fix: overflow

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@
     outline: none;
     border: none;
     text-decoration: none;
-    
   }
   
   body {
@@ -19,6 +18,7 @@
     background-color: var(--bg);
     color: var(--secondary);
     /* min-height: 3000px; */
+    overflow: hidden;
   }
   
 
